syntax = "proto3";

option csharp_namespace = "GrpcClient";

package user;

service UserService {

  rpc GetUser (GetUserRequest) returns (UserReply);
}

message GetUserRequest {
  string phone = 1;
  string pass = 2;
}

message UserReply {
	int32 id = 1;
	string fio = 2;
	string phone = 3;
	string pass = 4;
	AccountListReply accounts = 5;
}

message AccountListReply{
	repeated AccountReply accounts = 1;
}

message AccountReply {
	int32 id = 1;
	string number = 2;
	string type = 3;
}
